--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <a href="#home">Home</a>
         <a href="#about">About Us</a>
         <a href="#catalogue">Catalogue</a>
+        <a href="#review">Review</a>
         <a href="#contact">Contact</a>
       </div>
 
@@ -180,11 +181,29 @@
       <h4 data-aos="fade-up" data-aos-duration="1500">You can also custom anything you want! <a href="#contact">Click here</a> for custom.</h4>
     </section>
 
+    <!-- Review Section -->
+    <section id="review" class="review">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path
+          fill="#ddc49a"
+          fill-opacity="1"
+          d="M0,160L30,170.7C60,181,120,203,180,186.7C240,171,300,117,360,122.7C420,128,480,192,540,186.7C600,181,660,107,720,106.7C780,107,840,181,900,186.7C960,192,1020,128,1080,133.3C1140,139,1200,213,1260,245.3C1320,277,1380,267,1410,261.3L1440,256L1440,0L1410,0C1380,0,1320,0,1260,0C1200,0,1140,0,1080,0C1020,0,960,0,900,0C840,0,780,0,720,0C660,0,600,0,540,0C480,0,420,0,360,0C300,0,240,0,180,0C120,0,60,0,30,0L0,0Z"
+        ></path>
+      </svg>
+      <h2 data-aos="fade-down" data-aos-duration="1500">Review</h2>
+      <div class="review-grup">
+        <img src="img/review1.jpg" alt="" width="450" data-aos="fade-right" data-aos-duration="1500" />
+        <img src="img/review2.jpg" alt="" width="450" data-aos="fade-left" data-aos-duration="1500" />
+        <img src="img/review3.jpg" alt="" width="450" data-aos="fade-right" data-aos-duration="1500" />
+        <img src="img/reviiew4.jpg" alt="" width="450" data-aos="fade-left" data-aos-duration="1500" />
+      </div>
+    </section>
+
     <!-- Contact Section -->
     <section id="contact" class="contact">
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
-          fill="#ddc49a"
+          fill="#f1e2c9"
           fill-opacity="1"
           d="M0,160L30,170.7C60,181,120,203,180,186.7C240,171,300,117,360,122.7C420,128,480,192,540,186.7C600,181,660,107,720,106.7C780,107,840,181,900,186.7C960,192,1020,128,1080,133.3C1140,139,1200,213,1260,245.3C1320,277,1380,267,1410,261.3L1440,256L1440,0L1410,0C1380,0,1320,0,1260,0C1200,0,1140,0,1080,0C1020,0,960,0,900,0C840,0,780,0,720,0C660,0,600,0,540,0C480,0,420,0,360,0C300,0,240,0,180,0C120,0,60,0,30,0L0,0Z"
         ></path>
