--- a/index.html
+++ b/index.html
@@ -239,6 +239,7 @@
         <a href="#home">Home</a>
         <a href="#about">About Us</a>
         <a href="#catalogue">Catalogue</a>
+        <a href="#review">Review</a>
         <a href="#contact">Contact</a>
       </div>
       <div class="credit">
